# ElementaryCLI

./: .clang-format  .gitignore  CMakeLists.txt  README.md
exemple/: demo_ncurses.c  line.c  main.c
src/: cli.c  cli.h  cli_config.h  cli_debug.h  debug.h  lineBuffer.c  lineBuffer.h  line_buffer.c  line_buffer.h
